--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<title>Developer Sumit</title>
 </head>
 <body>
-	<p>Welcome to the world of knowledge!</p>
+	<p>Still in progress!</p>
+	<p>Developed by Sumit</p>
 </body>
 </html>
